After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762595 - search no longer allows to keynav to the results
search no longer allows to keynav to the results
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File Search Interface
3.19.x
Other Linux
: Normal normal
: 3.20
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-24 10:53 UTC by Jakub Steiner
Modified: 2016-03-03 10:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
list-view: unselect all items before selecting a new one (854 bytes, patch)
2016-03-03 10:25 UTC, Carlos Soriano
committed Details | Review
files-view: select first on loading only if no previous selection (2.63 KB, patch)
2016-03-03 10:25 UTC, Carlos Soriano
committed Details | Review
files-view: select first file even when directory not fully loaded (1.34 KB, patch)
2016-03-03 10:25 UTC, Carlos Soriano
committed Details | Review

Description Jakub Steiner 2016-02-24 10:53:27 UTC
I used to be able to arrow key into the result area to dig deeper into a result folder. I believe it was cursor down. I think we should even preselect the first result so you can just hit enter, ala gnome-shell.
Comment 1 Carlos Soriano 2016-02-24 10:59:01 UTC
Problem with preselecting is that files are being reordered while they are found, so you can end with the selection of the user changing all around.
Comment 2 Carlos Soriano 2016-02-24 11:00:52 UTC
to make it clearer, we select the first item once the search is done, but not while performing the search.
Comment 3 Carlos Soriano 2016-03-03 10:25:17 UTC
Created attachment 322958 [details] [review]
list-view: unselect all items before selecting a new one

It shouldn't happen, but better to be correct here.
Comment 4 Carlos Soriano 2016-03-03 10:25:27 UTC
Created attachment 322959 [details] [review]
files-view: select first on loading only if no previous selection

Avoid to select the first file if there is a selection already.
Although we were checking for the pending selection, it could be that
there is a selection already because the user selected a file.

This will be needed also for an upcoming patch, where we always select
the first file on displaying new files, even if the directory is not
fully loaded.
Comment 5 Carlos Soriano 2016-03-03 10:25:33 UTC
Created attachment 322960 [details] [review]
files-view: select first file even when directory not fully loaded

Currently we were waiting until the view was fully loaded to select the
first file.

This is fine when only navigating.

However, for search, we actually want to select the first file in order
to allow the user to open right away the most relevant file.

Let's see if this brings problems on icons jumping in large directories,
but I hope it doesn't in the most common cases.
Comment 6 Carlos Soriano 2016-03-03 10:26:04 UTC
Attachment 322958 [details] pushed as b33785a - list-view: unselect all items before selecting a new one
Attachment 322959 [details] pushed as bf91cdb - files-view: select first on loading only if no previous selection
Attachment 322960 [details] pushed as 2fa597e - files-view: select first file even when directory not fully loaded