list-view: unselect all items before selecting a new one

It shouldn't happen, but better to be correct here.

https://bugzilla.gnome.org/show_bug.cgi?id=762595